#1244 Necessity to let alias mapper cache aliases of attributes that has no attribute values ProductUrlHelper should use localized alias for attribute query string

--- a/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.FileUpload.cshtml
@@ -79,7 +79,7 @@
 
         elRemove.click(function (e) {
             elFile.html("").addClass("d-none");
-            elHidden.val(0);
+            elHidden.val('');
             $(this).hide();
             e.preventDefault();
         });
@@ -87,7 +87,7 @@
         setUploadedFile('@Model.UploadedFileGuid', '@Model.UploadedFileName');
 
         function setUploadedFile(downloadGuid, fileName) {
-        	if (!_.isEmpty(downloadGuid)) {
+        	if (!_.isEmpty(downloadGuid) && downloadGuid !== '0') {
         		elHidden.val(downloadGuid);
 
         		var downloadLink = "@storeUrl" + "download/getfileupload/?downloadId=" + downloadGuid;
