--- a/src/Presentation/SmartStore.Web/Administration/Content/telerik/_telerik.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/telerik/_telerik.scss
@@ -2,6 +2,10 @@
 
 /* SmartStore theme for Telerik MVC Extensions */
 
+
+/* Common
+-------------------------------------------------------------- */
+
 .t-filter-options input {
     padding-left: 3px !important;
     padding-right: 1px !important;
@@ -11,13 +15,21 @@
     border-color: $input-border-color; /*#a4abb2*/
     background-color: #fff;
 }
-.t-header, .t-grid-header, .t-toolbar, .t-grouping-header, .t-tooltip, .t-grid-pager {
+.t-header, 
+.t-grid-header, 
+.t-toolbar, 
+.t-grouping-header, 
+.t-tooltip, 
+.t-grid-pager {
     border-color: $gray-700;
     color: $gray-800;
     text-shadow: 0 1px 1px rgba(255,255,255, .75);
     @include gradient-y(#fafafa, #e9e9e9);
 }
-.t-menu-vertical, .t-editor, .t-tooltip, .t-tabstrip {
+.t-menu-vertical,
+ .t-editor, 
+.t-tooltip, 
+.t-tabstrip {
     background-position: 0 -48px;
 }
 .t-icon {
@@ -29,17 +41,25 @@
 .t-picker-wrap {
     padding-right: 23px;
 }
-.t-loading, .t-widget .t-loading {
+.t-loading, 
+.t-widget 
+.t-loading {
     background: transparent url('telerik/loading.gif') no-repeat 0 0;
 }
-.t-widget, .t-link:link, .t-link:active, .t-link:visited, .t-popup, .t-grid .t-header {
+.t-widget, 
+.t-link:link, 
+.t-link:active, 
+.t-link:visited, 
+.t-popup, 
+.t-grid .t-header {
     color: #3b3b3b;
 }
 .t-group {
     background-color: #f1f2f3;
     border-color: #a4abb2;
 }
-.t-content, .t-editable-area {
+.t-content, 
+.t-editable-area {
     border-color: #a4abb2;
     background-color: #fff;
 }
@@ -56,12 +76,14 @@
 .t-active-filter {
     background-color: #fff;
 }
-.t-state-hover, .t-state-hover:hover {
+.t-state-hover, 
+.t-state-hover:hover {
     background-color: #fae185;
     border-color: #f3d64a;
     color: #000;
 }
-.t-state-active, .t-header .t-state-active {
+.t-state-active, 
+.t-header .t-state-active {
     background-color: #fff;
     border-color: #a4abb2;
 }
@@ -74,31 +96,23 @@
 .t-state-hover, .t-state-selected {
     color: #000;
 }
-.t-state-error, .t-widget.input-validation-error, .t-widget .input-validation-error {
+.t-state-error, 
+.t-widget.input-validation-error, 
+.t-widget .input-validation-error {
     border-color: #ff7c7c;
     background-color: #ffe4e4;
     color: #f20000;
 }
-.t-button {
-    border-color: #a4abb2;
-    color: #3b3b3b;
-}
-.t-button, button.t-button.t-state-disabled:hover, a.t-button.t-state-disabled:hover, .t-state-disabled .t-button:hover {
-    background: #d2d5d9;
-}
-.t-button:hover {
-    border-color: #f3d64a;
-    background-color: #fae185;
-    color: #000;
-}
-.t-state-disabled, .t-state-disabled:hover, .t-state-disabled .t-link, .t-state-disabled .t-button {
-    border-color: #a4abb2;
-    color: #a4abb2;
-}
 .t-autocomplete {
     background-color: #fff;
 }
-.t-toolbar, .t-grouping-header, .t-grid-pager, .t-group-footer td, .t-grid-footer, .t-footer-template td, .t-widget .t-status {
+.t-toolbar, 
+.t-grouping-header, 
+.t-grid-pager, 
+.t-group-footer td, 
+.t-grid-footer, 
+.t-footer-template td, 
+.t-widget .t-status {
     border-color: $input-border-color /*#a4abb2*/;
     background-color: #f5f5f5; //#f1f2f3;
 }
@@ -120,7 +134,8 @@
 .t-grouping-dropclue {
     background: url('sprite.png') no-repeat -48px -288px;
 }
-.t-grouping-row .t-group-cell, .t-grouping-row p {
+.t-grouping-row .t-group-cell, 
+.t-grouping-row p {
     background: #fff;
     font-weight: bold;
     color: $gray-700;
@@ -132,96 +147,213 @@
 .t-treeview .t-state-selected {
     border-color: #f4b914;
 }
-.t-panelbar .t-link, .t-panelbar .t-group, .t-panelbar .t-content {
+.t-panelbar .t-link, 
+.t-panelbar .t-group, 
+.t-panelbar .t-content {
     border-color: #a4abb2;
 }
 .t-other-month .t-link {
     color: #a4abb2;
 }
 
+.t-link:hover {
+    text-decoration: none !important;
+}
 
-/* Numeric textbox */
+
+body .t-content.t-state-active {
+    padding: 10px !important;
+}
+
+.form-actions {
+    overflow: hidden;
+    padding-top: 1em;
+}
+.form-actions .t-button, 
+.form-actions .t-button button {
+    float: right;
+    margin-left: 10px;
+    padding: 2px 15px;
+}
+
+.dialog-content-container {
+	margin: 6px 0 2px 0;
+	padding: 5px;
+}
+
+
+td.adminData .t-combobox {
+    width: 306px;
+}
+
+
+/* Buttons
+-------------------------------------------------------------- */
+
+.t-button {
+    @extend .btn;
+    @extend .btn-secondary;
+
+    &:hover {
+        border-color: #f3d64a;
+        background-color: #fae185;
+        color: #000;
+    }
+}
+
+.t-button, 
+button.t-button.t-state-disabled:hover, 
+a.t-button.t-state-disabled:hover, 
+.t-state-disabled .t-button:hover {
+    background: #d2d5d9;
+}
+
+.t-state-disabled, 
+.t-state-disabled:hover, 
+.t-state-disabled .t-link, 
+.t-state-disabled .t-button {
+    border-color: #a4abb2;
+    color: #a4abb2;
+}
+
+
+
+/* Numeric textbox 
+-------------------------------------------------------------- */
 
 .t-numerictextbox {
 	overflow: hidden;
 	position: relative;
+
+    .t-input {
+        width: 301px;
+	    padding: 6px 8px 6px 3px;
+    }
+    &.small .t-input {
+	    width: 80px;
+    }
+    .t-formatted-value {
+	    position: absolute;
+        padding: 6px 0;
+	    left: 8px;
+	    right: 16px;
+	    overflow: hidden;
+    }
+    .t-arrow-up {
+        margin-top: 4px;
+        margin-left: -19px;
+    }
+    .t-arrow-down {
+        margin-bottom: 4px;
+    }
+    .t-icon {
+        opacity: 0.25;
+        &:hover { opacity: 1; }
+    }
 }
 
-.t-numerictextbox .t-input {
-    width: 301px;
-	padding: 6px 8px 6px 3px;
-}
-.t-numerictextbox.small .t-input {
-	width: 80px;
-}
-.t-numerictextbox .t-formatted-value {
-	position: absolute;
-    padding: 6px 0;
-	left: 8px;
-	right: 16px;
-	overflow: hidden;
-}
-.t-numerictextbox .t-arrow-up {
-    margin-top: 4px;
-    margin-left: -19px;
-}
-.t-numerictextbox .t-arrow-down {
-    margin-bottom: 4px;
-}
-.t-numerictextbox .t-icon {
-    opacity: 0.25;
-    &:hover { opacity: 1; }
+
+
+/* Grid
+-------------------------------------------------------------- */
+
+.t-grid {
+    td, th {
+	    vertical-align: middle;
+	    padding: 8px;
+    }
+
+    .t-filter-options {
+	    padding: 8px;
+    }
+
+    .t-status-text {
+	    color: #aaa;
+    }
+
+    .table {
+	    margin-bottom: 0;
+        td[align=center] {
+	        text-align: center;
+        }
+    }
+
+    .btn {
+	    padding: $input-btn-padding-x-sm $input-btn-padding-x-sm;
+        font-size: $font-size-sm;
+
+        .fa { font-size: $font-size-sm;  }
+    }
+
+    *:not(.btn-group) > .btn {
+	    margin: 0.2em;
+    }
+
+    .t-button .fa {
+	    margin-top: 0;
+    }
+
+    tbody .t-last {
+	    @include text-truncate();
+    }
+
+    form.t-grid-actions {
+	    margin: 0;
+    }
+
+    .text-box.single-line {
+        /* ... */
+    }
 }
 
-/* Grid edit tri state */
-.t-grid-edit-row select.tri-state {
+
+
+.t-grid-edit-row {
 	margin-bottom: 0;
+
+    select.tri-state {
+	    margin-bottom: 0;
+    }
+
+    td {
+	    padding-top: 6px;
+	    padding-bottom: 6px;
+    }
+
+    .text-box,
+    .t-numerictextbox,
+    .select2-container {
+	    box-sizing: border-box;
+	    width: 100%;
+	    left: 0;
+	    right: 0;
+	    min-width: 100%;
+	    max-width: 100%;
+	    margin: 0;
+    }
+
+    .text-box {
+	    padding: 4px 6px;
+	    height: 28px;
+    }
+
+    .t-numerictextbox .t-input {
+	    box-sizing: border-box;
+	    width: 99%;
+	    height: 99%;
+	    padding: 4px 18px 4px 3px;
+    }
+
+    .t-numerictextbox .t-arrow-up {
+        margin-left: -16px;
+    }
 }
 
-/* Grid */
-
-.t-grid td,
-.t-grid th {
-	vertical-align: middle;
-	padding: 8px;
-}
-
-.t-grid-edit-row td {
-	padding-top: 6px;
-	padding-bottom: 6px;
-}
 
 .t-grid-edit-cell {
 	padding: 6px;
 }
 
-.t-grid-edit-row .text-box,
-.t-grid-edit-row .t-numerictextbox,
-.t-grid-edit-row .select2-container {
-	box-sizing: border-box;
-	width: 100%;
-	left: 0;
-	right: 0;
-	min-width: 100%;
-	max-width: 100%;
-	margin: 0;
-}
-
-.t-grid-edit-row .text-box {
-	padding: 4px 6px;
-	height: 28px;
-}
-
-.t-grid-edit-row .t-numerictextbox .t-input {
-	box-sizing: border-box;
-	width: 99%;
-	height: 99%;
-	padding: 4px 18px 4px 3px;
-}
-
-.t-grid .t-filter-options {
-	padding: 8px;
-}
 
 .t-group.t-popup {
 	background-color: #f7f7f7;
@@ -233,3 +365,53 @@
 }
 
 
+
+.t-grid .t-button,
+.t-edit-form .t-button,
+.t-filter-options {
+	padding: 2px 4px;
+	font-size: $font-size-sm;
+	border-radius: 2px;
+}
+
+.t-filter-options {
+	font-size: $font-size-sm;
+}
+
+
+.t-grid-toolbar .btn {
+	text-shadow: none;
+	text-decoration: none;
+	font-size: 13px;
+}
+
+.t-grid-filter {
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	right: 4px;
+	top: 50%;
+	margin-top: -8px;
+}
+
+
+.t-grid-header .t-header {
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: bold !important;
+	padding: 0 !important;
+	position: relative;
+}
+
+.t-grid-header .t-header .t-link {
+	margin: 0;
+	padding: 0.6em;
+}
+
+.t-grid-pager,
+.t-grid-toolbar {
+	background: #f7f7f7;
+	text-shadow: none !important;
+	padding-top: .4em !important;
+	padding-bottom: .4em !important;
+}
