--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -360,6 +360,15 @@
                 @Html.ValidationMessageFor(model => model.ShowPopularProductTagsOnHomepage)
             </td>
         </tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.MaxItemsToDisplayInCatalogMenu)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.MaxItemsToDisplayInCatalogMenu)
+                @Html.ValidationMessageFor(model => model.MaxItemsToDisplayInCatalogMenu)
+            </td>
+        </tr>
     </table>
 
     <table class="adminContent">
