--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
@@ -329,6 +329,32 @@ $mixed-megamenu-bg:             $megamenu-bg;
     }
 }
 
+/* manufacturer menu */
+#dropdown-menu--10 .dropdown-menu.has-footer {
+    padding-bottom: 170px; /* 2 rows a 75px + margin-top a 20px */
+}
+#dropdown-menu--10 .dropdown-menu {
+    .mega-menu-dropdown-heading {
+        line-height: 1.125rem;
+    }
+}
+.manufacturer-menu-footer {
+    background: $gray-lightest;
+    border-top: 1px solid $gray-lighter;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-top: 20px;
+}
+.manufacturer-menu-footer .manufacturer-menu-footer-thumbs {
+    width: 75px;
+}
+.manufacturer-menu-footer .manufacturer-menu-footer-thumbs > a > img {
+    margin: auto;
+    filter: grayscale(100%);
+}
+
+
 @include media-breakpoint-down(md) {
     .megamenu-dropdown-container .picture-container {
         display: none;
@@ -364,3 +390,4 @@ $mixed-megamenu-bg:             $megamenu-bg;
 .boxed .megamenu-dropdown-container.simple .dropdown-menu {
     margin-left: 20px;
 }
+
