Restructured catalog settings

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
@@ -314,7 +314,7 @@ $mixed-megamenu-bg:             $megamenu-bg;
     }
 }
 
-/* Product rotator */
+// product rotator 
 .megamenu-container .rotator-container {
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: $megamenu-rotator-bg;
@@ -333,7 +333,7 @@ $mixed-megamenu-bg:             $megamenu-bg;
     }
 }
 
-/* manufacturer menu */
+// manufacturer menu 
 #dropdown-menu--10 .dropdown-menu .mega-menu-dropdown-heading {
     line-height: 1.125rem;
 }
