--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_MyAccount.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_MyAccount.cshtml
@@ -6,7 +6,7 @@
 <div class="page page-myaccount page-myaccount-@ViewBag.PageClassToken">
 	<div class="page-body">
 		<div class="row">
-			<div class="col-md-4 col-lg-3">
+			<div class="col-md-4 col-lg-3 d-print-none">
 				@{ Html.RenderAction("MyAccountMenu", "Customer", new { selectedItem = ViewBag.PageClassToken }); }
 			</div>
 			<div class="col-md-8 col-lg-9">
