Changed names from manufacturer to brand

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
@@ -333,11 +333,11 @@ $mixed-megamenu-bg:             $megamenu-bg;
     }
 }
 
-// manufacturer menu 
+// brand menu 
 #dropdown-menu--10 .dropdown-menu .mega-menu-dropdown-heading {
     line-height: 1.125rem;
 }
-.manufacturer-menu-footer {
+.brand-menu-footer {
     background: $gray-lightest;
     border-top: 1px solid $gray-lighter;
     border-radius: 0 0 $border-radius $border-radius;
