--- a/src/Presentation/SmartStore.Web/Administration/Views/Payment/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Payment/Edit.cshtml
@@ -107,11 +107,11 @@
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.RoundOrderTotal)
+                @Html.SmartLabelFor(model => model.RoundOrderTotalEnabled)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.RoundOrderTotal)
-                @Html.ValidationMessageFor(model => model.RoundOrderTotal)
+                @Html.EditorFor(model => model.RoundOrderTotalEnabled)
+                @Html.ValidationMessageFor(model => model.RoundOrderTotalEnabled)
             </td>
         </tr>
     </table>
